{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 39,
  "lineage": "74516e54-50bf-7360-b3d7-5dd285788d7b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945116902499:vpc/vpc-0a24350eb9334f4cf",
            "cidr_block": "10.126.196.0/26",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-036b7990eaacb858e",
                "cidr_block": "10.126.196.0/26",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1014e76a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Kansas_Prod_App_VPC"
                ]
              }
            ],
            "id": "vpc-0a24350eb9334f4cf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09415ccc31fbac3e2",
            "owner_id": "945116902499",
            "state": "available",
            "tags": {
              "Name": "Kansas_Prod_App_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_ecs_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f",
            "arn_suffix": "app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f",
            "dns_name": "internal-Sym-Kan-PRD-Srv-ALB-1818564463.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Sym-Kan-PRD-Srv-ALB",
            "security_groups": [
              "sg-07f310b9bbc5f7c61"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06899ed146379aee3"
              },
              {
                "subnet_id": "subnet-0f52b88b7e012eca0"
              }
            ],
            "subnets": [
              "subnet-06899ed146379aee3",
              "subnet-0f52b88b7e012eca0"
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "vpc_id": "vpc-0a24350eb9334f4cf",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2",
            "certificate_arn": "arn:aws:acm:us-east-1:945116902499:certificate/981b7fa0-3b04-4995-bbb1-8b56446801a3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-jobs/4bd68c007369f937",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "listener_rule",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-auditevents/490342aee3c28031",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2/7c050ff8e4f2aab3",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auditevents*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/auditevents*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2/7c050ff8e4f2aab3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2",
            "priority": 2
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-cklscrawler/60185117c51d377c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2/7ff17150c4bdff9c",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/checklistcrawler*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/checklistcrawler*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2/7ff17150c4bdff9c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2",
            "priority": 4
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-dataaudit/cafaeda341880ccb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2/ed99a74e9eea2ff3",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/dataaudit*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/dataaudit*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2/ed99a74e9eea2ff3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2",
            "priority": 1
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-esindexer/78ce782e06fb1f1a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2/38c52820f4d47381",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/elasticsearchindexer*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/elasticsearchindexer*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2/38c52820f4d47381",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/11533d9f337fa5b2",
            "priority": 3
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-auditevents/490342aee3c28031",
            "arn_suffix": "targetgroup/Sym-Kan-PRD-Srv-auditevents/490342aee3c28031",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/auditevents/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-auditevents/490342aee3c28031",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-PRD-Srv-auditevents",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a24350eb9334f4cf"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-cklscrawler/60185117c51d377c",
            "arn_suffix": "targetgroup/Sym-Kan-PRD-Srv-cklscrawler/60185117c51d377c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/checklistcrawler/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-cklscrawler/60185117c51d377c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-PRD-Srv-cklscrawler",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a24350eb9334f4cf"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-dataaudit/cafaeda341880ccb",
            "arn_suffix": "targetgroup/Sym-Kan-PRD-Srv-dataaudit/cafaeda341880ccb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/dataaudit/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-dataaudit/cafaeda341880ccb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-PRD-Srv-dataaudit",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a24350eb9334f4cf"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-esindexer/78ce782e06fb1f1a",
            "arn_suffix": "targetgroup/Sym-Kan-PRD-Srv-esindexer/78ce782e06fb1f1a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/elasticsearchindexer/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-esindexer/78ce782e06fb1f1a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-PRD-Srv-esindexer",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a24350eb9334f4cf"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-jobs/4bd68c007369f937",
            "arn_suffix": "targetgroup/Sym-Kan-PRD-Srv-jobs/4bd68c007369f937",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/Account/Login?ReturnUrl=%2Fjobs",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-PRD-Srv-jobs/4bd68c007369f937",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-PRD-Srv-jobs",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a24350eb9334f4cf"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "httptohttps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/3198ac4b45efa771",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f/3198ac4b45efa771",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-PRD-Srv-ALB/0fc4471ccc4c052f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945116902499:security-group/sg-07f310b9bbc5f7c61",
            "description": "Security Group for ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f310b9bbc5f7c61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Sym-Kan-PRD-Srv-SG",
            "name_prefix": null,
            "owner_id": "945116902499",
            "revoke_rules_on_delete": false,
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "SG",
              "service_role": "ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24350eb9334f4cf"
          }
        }
      ]
    }
  ]
}